--- a/Pharmacy/PharmacyApp/templates/PharmacyApp/home.html
+++ b/Pharmacy/PharmacyApp/templates/PharmacyApp/home.html
@@ -59,6 +59,8 @@
     <div>
         <h2>Account Options</h2>
         <a href="{% url 'register' %}">Register</a> | <a href="{% url 'login' %}">Login</a>
+        <a href="{% url 'manager_registration' %}">Manager Registration</a>
+    
     </div>
 
     <!-- Add any additional content or sections as needed -->
