--- a/Pharmacy/PharmacyApp/templates/PharmacyApp/register.html
+++ b/Pharmacy/PharmacyApp/templates/PharmacyApp/register.html
@@ -115,14 +115,14 @@
             <label for="{{ form.phone_number.id_for_label }}">Phone Number:</label>
             {{ form.phone_number }}
 
-            <label for="{{ form.address.id_for_label }}">Address:</label>
+            <!--<label for="{{ form.address.id_for_label }}">Address:</-label>
             {{ form.address }}
 
             <label for="{{ form.role.id_for_label }}">Role:</label>
             {{ form.role }}
 
             <label for="{{ form.date_of_birth.id_for_label }}">Date of Birth:</label>
-            {{ form.date_of_birth }}
+            {{ form.date_of_birth }} -->
 
             <label for="{{ form.gender.id_for_label }}">Gender:</label>
             {{ form.gender }}
